@@ -5,14 +5,8 @@ import java.util.HashSet;
 import java.util.List;
 import java.util.Optional;
 import java.util.Set;
-import java.util.stream.Collectors;
-
-import javax.transaction.Transactional;
 
 import org.apache.commons.lang3.StringUtils;
-import org.apache.logging.log4j.LogManager;
-import org.apache.logging.log4j.Logger;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.Sort;
 import org.springframework.security.core.Authentication;
 import org.springframework.security.core.context.SecurityContextHolder;
@@ -36,22 +30,22 @@ import com.uicode.postit.postitserver.service.global.UserService;
 import com.uicode.postit.postitserver.util.parameter.ParameterConst;
 import com.uicode.postit.postitserver.util.parameter.ParameterUtil;
 
+import jakarta.transaction.Transactional;
+import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
+
 @Service
 @Transactional
+@RequiredArgsConstructor
+@Slf4j
 public class UserServiceImpl implements UserService {
-
-    private static final Logger LOGGER = LogManager.getLogger(UserServiceImpl.class);
 
     private static final Integer MIN_PASSWORD_LENGTH = 5;
 
-    @Autowired
-    private UserDao userDao;
-
-    @Autowired
-    private UserAuthorityDao userAuthorityDao;
-
-    @Autowired
-    private GlobalService globalService;
+    private final UserDao userDao;
+    private final UserAuthorityDao userAuthorityDao;
+    private final GlobalService globalService;
+    private final UserMapper userMapper;
 
     @Override
     public UserDetails loadUserByUsername(String username) {
@@ -65,19 +59,19 @@ public class UserServiceImpl implements UserService {
         if (authentication == null) {
             return null;
         }
-        Object userPrincipal = authentication.getPrincipal();
-        if (!(userPrincipal instanceof User)) {
-            return null;
+        Object userPrincipalObj = authentication.getPrincipal();
+        if (userPrincipalObj instanceof User userPrincipal) {
+            return userMapper.toDto( userPrincipal);
         } else {
-            return UserMapper.INSTANCE.toDto((User) userPrincipal);
+            return null;
         }
     }
 
     @Override
     public List<UserDto> getUserList() {
-        LOGGER.info("GetUserList");
+        log.info("GetUserList");
         Iterable<User> userIterable = userDao.findAll(Sort.by("username").ascending());
-        return Streams.stream(userIterable).map(UserMapper.INSTANCE::toDto).collect(Collectors.toList());
+        return Streams.stream(userIterable).map(userMapper::toDto).toList();
     }
 
     @Override
@@ -89,26 +83,26 @@ public class UserServiceImpl implements UserService {
             // Creation
             Optional<String> maxUserParameter = globalService.getParameterValue(ParameterConst.USER_MAX);
             Long maxUser = ParameterUtil.getLong(maxUserParameter, 0l);
-            if (userDao.count() > maxUser) {
+            if (userDao.count() >= maxUser) {
                 throw new FunctionnalException("Max User achieved, creation is blocked");
             }
 
             user = new User();
             user.setEnabled(false);
-            LOGGER.info("Create user");
+            log.info("Create user");
 
         } else {
             // Update
             Optional<User> userOpt = userDao.findById(userId);
             user = userOpt.orElseThrow(() -> new NotFoundException("User"));
-            LOGGER.info("Update user with the id : {}", userId);
+            log.info("Update user with the id : {}", userId);
         }
 
         updatePassword(userDto.getPassword(), user);
         updateRoleList(userDto.getRoleList(), user);
-        UserMapper.INSTANCE.updateEntity(userDto, user);
+        userMapper.updateEntity(userDto, user);
 
-        return UserMapper.INSTANCE.toDto(userDao.save(user));
+        return userMapper.toDto(userDao.save(user));
     }
 
     private void updatePassword(String password, User user) throws InvalidDataException {
@@ -143,18 +137,18 @@ public class UserServiceImpl implements UserService {
     public void deleteUser(Long userId) {
         Optional<User> userOpt = userDao.findById(userId);
         if (!userOpt.isPresent()) {
-            LOGGER.warn("User not found for deletion, id = %s", userId);
+            log.warn("User not found for deletion, id = %s", userId);
             return;
         }
         userDao.delete(userOpt.get());
-        LOGGER.info("Delete user with the id : {}", userId);
+        log.info("Delete user with the id : {}", userId);
     }
 
     @Override
     public List<String> getRoleList() {
-        LOGGER.info("getRoleList");
+        log.info("getRoleList");
         Iterable<UserAuthority> userAuthorityIterable = userAuthorityDao.findAll(Sort.by("authority").ascending());
-        return Streams.stream(userAuthorityIterable).map(UserAuthority::getAuthority).collect(Collectors.toList());
+        return Streams.stream(userAuthorityIterable).map(UserAuthority::getAuthority).toList();
     }
 
 }
